i18n/zh-Hans/docusaurus-plugin-content-docs/version-1.2/dgop/configuration.mdx
---
title: 配置
description: 配置DGOP外观和命令
sidebar_position: 3
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗  ██████╗  ██████╗ ██████╗
██╔══██╗██╔════╝ ██╔═══██╗██╔══██╗
██║  ██║██║  ███╗██║   ██║██████╔╝
██║  ██║██║   ██║██║   ██║██╔═══╝
██████╔╝╚██████╔╝╚██████╔╝██║
╚═════╝  ╚═════╝  ╚═════╝ ╚═╝
                                  `}
/>

# DGOP配置 {#dgop-configuration}

## API {#api}

对于 API，您可以设置以下环境变量来覆盖 http 服务器的端口：
- `API_PORT`（默认为`63484`）

## 颜色 {#colors}

dgop 将从 `~/.config/dgop/colors.json` 准备颜色：

示例：

```json
{
  "ui": {
    "border_primary": "#ccbeff",
    "border_secondary": "#cac3dc",
    "header_background": "#ccbeff",
    "header_text": "#33275e",
    "footer_background": "#141318",
    "footer_text": "#cac4cf",
    "text_primary": "#e6e1e9",
    "text_secondary": "#cac4cf",
    "text_accent": "#ccbeff",
    "selection_background": "#ccbeff",
    "selection_text": "#33275e"
  },
  "charts": {
    "network_download": "#ccbeff",
    "network_upload": "#4a3e76",
    "network_line": "#cac3dc",
    "cpu_core_low": "#4a3e76",
    "cpu_core_medium": "#ccbeff",
    "cpu_core_high": "#eeb8ca",
    "disk_read": "#ccbeff",
    "disk_write": "#4a3e76"
  },
  "progress_bars": {
    "memory_low": "#4a3e76",
    "memory_medium": "#ccbeff",
    "memory_high": "#eeb8ca",
    "disk_low": "#4a3e76",
    "disk_medium": "#ccbeff",
    "disk_high": "#eeb8ca",
    "cpu_low": "#4a3e76",
    "cpu_medium": "#ccbeff",
    "cpu_high": "#eeb8ca",
    "progress_background": "#201f24"
  },
  "temperature": {
    "cold": "#4a3e76",
    "warm": "#ccbeff",
    "hot": "#eeb8ca",
    "danger": "#ffb4ab"
  },
  "status": {
    "success": "#22C55E",
    "warning": "#F59E0B",
    "error": "#ffb4ab",
    "info": "#ccbeff"
  }
}
```

### matugen 模板 {#matugen-template}

以下是可与 matugen 一起使用的模板：

```json
{
  "ui": {
    "border_primary": "{{colors.primary.default.hex}}",
    "border_secondary": "{{colors.secondary.default.hex}}",
    "header_background": "{{colors.primary.default.hex}}",
    "header_text": "{{colors.on_primary.default.hex}}",
    "footer_background": "{{colors.surface_container.default.hex}}",
    "footer_text": "{{colors.on_surface_variant.default.hex}}",
    "text_primary": "{{colors.on_surface.default.hex}}",
    "text_secondary": "{{colors.on_surface_variant.default.hex}}",
    "text_accent": "{{colors.primary.default.hex}}",
    "selection_background": "{{colors.primary.default.hex}}",
    "selection_text": "{{colors.on_primary.default.hex}}"
  },
  "charts": {
    "network_download": "{{colors.primary.default.hex}}",
    "network_upload": "{{colors.primary_container.default.hex}}",
    "network_line": "{{colors.secondary.default.hex}}",
    "cpu_core_low": "{{colors.primary_container.default.hex}}",
    "cpu_core_medium": "{{colors.primary.default.hex}}",
    "cpu_core_high": "{{colors.tertiary.default.hex}}",
    "disk_read": "{{colors.primary.default.hex}}",
    "disk_write": "{{colors.primary_container.default.hex}}"
  },
  "progress_bars": {
    "memory_low": "{{colors.primary_container.default.hex}}",
    "memory_medium": "{{colors.primary.default.hex}}",
    "memory_high": "{{colors.tertiary.default.hex}}",
    "disk_low": "{{colors.primary_container.default.hex}}",
    "disk_medium": "{{colors.primary.default.hex}}",
    "disk_high": "{{colors.tertiary.default.hex}}",
    "cpu_low": "{{colors.primary_container.default.hex}}",
    "cpu_medium": "{{colors.primary.default.hex}}",
    "cpu_high": "{{colors.tertiary.default.hex}}",
  "progress_background": "{{colors.surface_container_high.default.hex}}"
  },
  "temperature": {
    "cold": "{{colors.primary_container.default.hex}}",
    "warm": "{{colors.primary.default.hex}}",
    "hot": "{{colors.tertiary.default.hex}}",
    "danger": "{{colors.error.default.hex}}"
  },
  "status": {
    "success": "#22C55E",
    "warning": "#F59E0B",
    "error": "{{colors.error.default.hex}}",
    "info": "{{colors.primary.default.hex}}"
  }
}
```

## 故障排除 {#troubleshooting}

### 常见问题 {#common-issues}

**API 未启动：**
- 检查端口可用性：`netstat -tlnp | grep :63484`
- 检查日志

## 后续步骤 {#next-steps}

- [用法](usage) - 学习 CLI 命令和 API 用法
